syntax = "proto3";
package proto.grpc;

message LightStrip {
  int32 num_lights = 1;
  int32 pin = 2;
}

message Lights {
  string serial_port = 1;
  repeated LightStrip strips = 10;
}

message Visualization {}

message QueryCurrentVisualizationRequest {}

message RegisterVisualizationRequest {}

message Empty {}
